@@ -93,6 +93,9 @@ Bug Fixes
 * LUCENE-10529: Properly handle when TestTaxonomyFacetAssociations test case randomly indexes
   no documents instead of throwing an NPE. (Greg Miller)
 
+* LUCENE-10470: Check if polygon has been successfully tessellated before we fail (we are failing some valid
+  tessellations) and allow filtering edges that fold on top of the previous one. (Ignacio Vera)  
+  
 Build
 ---------------------
 
